@@ -230,4 +230,5 @@
   1-Apr-2020  V0.974 Add test cases for RESID annotations
   5-Apr-2020  V0.975 Adjustments to logging details for sequence processing
   7-Apr-2020  V0.976 Add min/max for consolidated diffraction wavelength details
+  8-Apr-2020  V0.977 Adjust handling of nested contexts for subcategories.
 
